# HelloCmake

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  main.cpp
